Fix icon cutoff

--- a/client/components/Icons/TreeShakeIcon.scss
+++ b/client/components/Icons/TreeShakeIcon.scss
@@ -1,5 +1,5 @@
 svg.treeshake-icon-animated {
-  overflow: visible;
+  overflow: visible !important;
 
   .tree-shake-icon-svg__bush {
     transition: transform 0.3s;
